--- a/2nd_dodik/2nd_dodik.csproj
+++ b/2nd_dodik/2nd_dodik.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>_2nd</RootNamespace>
+    <RootNamespace>_3rd</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
